--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Name - Digital Resume</title>
+    <title>Dominic Patino - Digital Resume</title>
     <style>
         * {
             margin: 0;
             padding: 0;
             box-sizing: border-box;
-            font-family: 'Arial', sans-serif;
+            font-family: 'Calibri', Arial;
         }
 
         body {
@@ -77,38 +77,39 @@
 </head>
 <body>
     <header>
-        <h1>Your Name</h1>
-        <p>Your Title / Professional Role</p>
+        <h1>Dominic Patino</h1>
+        <p>Mississippi State / Electrical Engineer</p>
     </header>
 
     <div class="section" id="executive-summary">
-        <h2>Executive Summary</h2>
-        <p>A brief, compelling summary of your professional background and career objectives. Highlight your key strengths and what makes you unique.</p>
+        <h2>Summary</h2>
+        <p>I am a dedicated and strong worker, and I am very open to new tasks and conditions. I work well with others, and I have teamwork experience through my numerous years in clubs and extracurricular sports. I am intellectually inclined and have maintained a 4.0 average throughout my high school experience. Also, I achieved a score of 33 on my ACT which puts me in the 98th percentile of the entire country. A leader, problem solver, and progressive thinker, have all been words that have been used to describe me. I am adaptable, work well under pressure, and am very organized. These skills all require critical thinking and problem solving, of which I have an ample supply of.
+        </p>
     </div>
 
     <div class="section" id="about">
         <h2>About</h2>
-        <p>Share your professional story, values, and what drives you. Include relevant personal interests that might add value to your professional profile.</p>
+        <p>Engineer doing Engineering things in an Engineering world, surrounded by Engineering problems (lack of grammar).</p>
     </div>
 
     <div class="section" id="experience">
         <h2>Experience</h2>
         <div class="experience-item">
             <h3>Job Title</h3>
-            <p class="date">Company Name | January 2020 - Present</p>
+            <p class="date">Mississippi Power | June 2024 - Present</p>
             <ul>
-                <li>Key achievement or responsibility</li>
-                <li>Key achievement or responsibility</li>
-                <li>Key achievement or responsibility</li>
+                <li>Handled multiple projects</li>
+                <li>Followed day to day activities of Electricians and Engineers</li>
+                <li>Recieved one-on-one mentoring from an engineer with 20+ years of experience</li>
             </ul>
         </div>
         <div class="experience-item">
             <h3>Previous Job Title</h3>
-            <p class="date">Previous Company | January 2018 - December 2019</p>
+            <p class="date">Hargrove Engineering | june 2023 - August 2023</p>
             <ul>
-                <li>Key achievement or responsibility</li>
-                <li>Key achievement or responsibility</li>
-                <li>Key achievement or responsibility</li>
+                <li>Worked as an intern over the summer</li>
+                <li>Learned to use AutoCAD and Excel</li>
+                <li>Edited and updated engineering documents/schematics</li>
             </ul>
         </div>
     </div>
@@ -116,21 +117,21 @@
     <div class="section" id="education">
         <h2>Education</h2>
         <div class="education-item">
-            <h3>Degree Name</h3>
-            <p class="date">University Name | Graduation Year</p>
-            <p>Additional details about your education, honors, relevant coursework, etc.</p>
+            <h3>Bachelors in Electrical Engineering</h3>
+            <p class="date">Mississippi State | 2026 </p>
+            <p>Honors college | 4.0 GPA | Electrical Engineer</p>
         </div>
     </div>
 
     <div class="section" id="skills">
         <h2>Skills</h2>
         <div class="skills-container">
-            <span class="skill">Skill 1</span>
-            <span class="skill">Skill 2</span>
-            <span class="skill">Skill 3</span>
-            <span class="skill">Skill 4</span>
-            <span class="skill">Skill 5</span>
-            <span class="skill">Skill 6</span>
+            <span class="skill">Hard Working</span>
+            <span class="skill">Excel Experience</span>
+            <span class="skill">C++ and Python</span>
+            <span class="skill">Leader</span>
+            <span class="skill">Vocal</span>
+            <span class="skill">Knowledgeable</span>
         </div>
     </div>
 </body>
