--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         h2 {
             color: #2c3e50;
             margin-bottom: 20px;
-            border-bottom: 2px solid #3498db;
+            border-bottom: 2px solid #800000db;
             padding-bottom: 10px;
         }
 
@@ -54,7 +54,7 @@
         }
 
         .skill {
-            background-color: #3498db;
+            background-color: #800000db;
             color: white;
             padding: 5px 15px;
             border-radius: 15px;
